# url_alias

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
deploy/: docker-compose.yml
deploy/url_alias/: Dockerfile  entrypoint.sh  generate_jwt_keys.sh
env/: .env  .env.docker
src/url_alias/: __main__.py
src/url_alias/application/common/: base_interactor.py  filter.py
src/url_alias/application/common/exceptions/: auth.py  repository.py  url.py  user.py
src/url_alias/application/interactors/url/: create.py  deactivate.py  get_list.py  redirect.py
src/url_alias/application/interactors/user/: login.py  register.py
src/url_alias/application/interfaces/: alias_service.py  password_hasher.py  transaction_manager.py  user_uuid_provider.py
src/url_alias/application/interfaces/repositories/: base.py  click.py  url.py  user.py
src/url_alias/controllers/http/v1/common/: exc_handlers.py  pagination.py  schemes.py
src/url_alias/controllers/http/v1/routes/: auth.py  healthcheck.py  url.py  user.py
src/url_alias/controllers/http/v1/schemes/: url.py  user.py
src/url_alias/domain/common/: base_entity.py  exceptions.py
src/url_alias/domain/entities/: click.py  url.py  user.py
src/url_alias/domain/services/: access.py
src/url_alias/infrastructure/: alias_service.py  auth.py  constants.py  cookie_service.py  logging.py  password_hasher.py  user_uuid_provider.py
src/url_alias/infrastructure/config/: __init__.py  asgi.py  auth.py  db.py  main_config.py
src/url_alias/infrastructure/persistence/: db_provider.py
src/url_alias/infrastructure/persistence/adapters/: base.py  click.py  transaction_manager.py  url.py  user.py
src/url_alias/infrastructure/persistence/alembic/: env.py
src/url_alias/infrastructure/persistence/alembic/versions/: 2025_06_03-0c63aa3e951b_clicks.py  2025_06_03-1a29acd80ba3_user_and_url.py
src/url_alias/infrastructure/persistence/models/: base.py  click.py  url.py  user.py
src/url_alias/main/: api_gateway.py  exception_handlers.py  map_tables.py  middlewares.py  web.py
src/url_alias/main/di/: domain_services.py  interactors.py  setup.py
src/url_alias/main/di/infrastructure/: auth.py  config.py  cookie_service.py  password_hasher.py  provider.py  url_alias_service.py  user_uuid_provider.py
src/url_alias/main/di/infrastructure/persistence/: database.py  repositories.py  transaction_manager.py
tests/factories/: entities.py
tests/unit/application/url/: test_create.py  test_deactivate.py  test_redirect.py
tests/unit/application/user/: test_login.py  test_register.py
tests/unit/domain/: conftest.py
tests/unit/domain/entities/: test_url.py  test_user.py
tests/unit/domain/services/: test_access.py
